--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,2 +1,29 @@
-<h1>Products#index</h1>
-<p>Find me in app/views/products/index.html.erb</p>
+<h1>Listing products</h1>
+
+<table>
+  <tr>
+    <th>Name</th>
+    <th>Price</th>
+    <th>Color</th>
+    <th>Status</th>
+    <th>Inward Date</th>
+    <th>Description</th>
+  </tr>
+
+<% @products.each do |product| %>
+  <tr>
+    <td><%= product.name %></td>
+    <td><%= product.price %></td>
+    <td><%= product.color %></td>
+    <td><%= product.status %></td>
+    <td><%= product.inward_date %></td>
+    <td><%= product.description %></td>
+    <td><%= link_to 'Edit', edit_product_path(product) %></td>
+  </tr>
+<% end %>
+</table>
+
+<br />
+
+<%= link_to 'New Pen', new_product_path %><br />
+<%= link_to 'New Notebook', new_product_path %>
