--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -18,12 +18,12 @@
     <td><%= product.status %></td>
     <td><%= product.inward_date %></td>
     <td><%= product.description %></td>
-    <td><%= link_to 'Edit', edit_product_path(product) %></td>
+    <td><%= link_to 'Edit', edit_polymorphic_path(product) %></td>
   </tr>
 <% end %>
 </table>
 
 <br />
 
-<%= link_to 'New Pen', new_product_path %><br />
-<%= link_to 'New Notebook', new_product_path %>
+<%= link_to 'New Pen', new_pen_path %><br />
+<%= link_to 'New Notebook', new_notebook_path %>
